                               ViSP
                     Visual Servoing Platform
                     Resume of the change log

     Copyright (C) 2005 - 2022 by Inria. All rights reserved.
                      https://visp.inria.fr

ViSP 3.5.1 (under development)
  - Contributors:
    . Fabien Spindler
  - New features and improvements
    . Video writer is now able to create the output folder recursively (see vpVideoWriter)
    . Tutorials in tutorial/grabber folder have now a new --no-display command line option
      that allows to grab a video remotely
  - Tutorials
    . New tutorial: How to manipulate a video or a sequence of images
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-video-manipulation.html
    . New tutorial: Planar object pose estimation using RGB-D data
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-planar-object-pose.html
  - Bug fixed
    . [#1042] testColorConversion.cpp segfault randomly
    . [#1045] CXX standard not propagated when using pkg-config or visp-config
----------------------------------------------
ViSP 3.5.0 (released February 15, 2022)
  - Contributors:
    . Fabien Spindler, Joudy Nader, Souriya Trinh, Julien Dufour, Ha Thuc Long,
      Christian Clauss, Olivier Kermorgant
  - New features and improvements
    . Bump default cxx standard to cxx17
    . Update 3rdparty/apriltag detector
    . Update 3rdparty/simdlib used for optimization
    . Update 3rdparty/stb_image used for image io
    . Update 3rdparty/catch for testing
    . Camera calibration model can now consider px/py aspect ratio and estimate
      a model where px = py
    . Introduce Bayer demosaicing also called debayering in vpImageConvert
    . UEye grabber now support Bayer 8 color mode
    . Update to use Catch2 2.13.7
    . Improve video reader and writer classes to consider a sequence of non consecutive
      images
    . Improve camera intrinsic and extrinsic calibration tools
    . Compatibility with Visual Studio 17 2022