@@ -1,4 +1,4 @@
-                               ViSP
+﻿                               ViSP
                      Visual Servoing Platform
                      Resume of the change log
 
@@ -20,6 +20,7 @@ ViSP 3.5.1 (under development)
   - Bug fixed
     . [#1042] testColorConversion.cpp segfault randomly
     . [#1045] CXX standard not propagated when using pkg-config or visp-config
+    . [#1046] vpIoTools::getParent() returns an empty string when folder separator is not found
 ----------------------------------------------
 ViSP 3.5.0 (released February 15, 2022)
   - Contributors:
